# ChangeLog for dev-python/python-distutils-extra
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/python-distutils-extra/ChangeLog,v 1.28 2014/03/31 20:40:58 mgorny Exp $

  31 Mar 2014; Michał Górny <mgorny@gentoo.org>
  python-distutils-extra-2.33-r1.ebuild, python-distutils-extra-2.37-r1.ebuild:
  Add support for the new PyPy slotting.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org>
  python-distutils-extra-2.33-r1.ebuild, python-distutils-extra-2.37-r1.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  20 May 2013; Agostino Sarubbo <ago@gentoo.org>
  python-distutils-extra-2.37-r1.ebuild:
  Stable for x86, wrt bug #463082

  16 May 2013; Agostino Sarubbo <ago@gentoo.org>
  python-distutils-extra-2.37-r1.ebuild:
  Stable for ppc, wrt bug #463082

  16 May 2013; Agostino Sarubbo <ago@gentoo.org>
  python-distutils-extra-2.37-r1.ebuild:
  Stable for amd64, wrt bug #463082

*python-distutils-extra-2.33-r1 (24 Feb 2013)

  24 Feb 2013; Michał Górny <mgorny@gentoo.org>
  +python-distutils-extra-2.33-r1.ebuild:
  Migrate the older version to distutils-r1 as required by x11-terms/terra.

*python-distutils-extra-2.37-r1 (12 Feb 2013)

  12 Feb 2013; Michał Górny <mgorny@gentoo.org>
  +python-distutils-extra-2.37-r1.ebuild:
  Migrate to distutils-r1.

  16 Nov 2012; Patrick Lauer <patrick@gentoo.org>
  python-distutils-extra-2.37.ebuild:
  Adding py3 capability #442824

*python-distutils-extra-2.37 (11 Nov 2012)

  11 Nov 2012; Tim Harder <radhermit@gentoo.org>
  +python-distutils-extra-2.37.ebuild:
  Version bump.

*python-distutils-extra-2.36 (30 Oct 2012)

  30 Oct 2012; Patrick Lauer <patrick@gentoo.org>
  +python-distutils-extra-2.36.ebuild:
  Bump

  12 Oct 2012; Mike Gilbert <floppym@gentoo.org>
  python-distutils-extra-2.35.ebuild:
  Restrict python 2.5 per Arfrever.

*python-distutils-extra-2.35 (09 Oct 2012)

  09 Oct 2012; Patrick Lauer <patrick@gentoo.org>