@@ -7,6 +7,7 @@ DIST python-distutils-extra-2.34.tar.gz 27228 SHA256 1ac74965d52753aa665c962ac59
 DIST python-distutils-extra-2.35.tar.gz 27462 SHA256 80712f6fb362f0f0cf68d31f877336bf9a12e7fd2e6f868ead8f2599ccbd65da SHA512 28eeb677358a5bf3ec1ed2fdacec0366313578ab3f6c3a76a2b2b1546d51845bdd08cb06c476548488830e34c809774c0cd592a64a6a7e8de907eaa475bcd1b3 WHIRLPOOL 253e1cf02af936ebddcae35aee8365fc54f589c07e2a91cd4708bd11fd5197f47fa5e0222a173d6aab7f7918c24f6ac436aeed43f161c596621628ff4ba1366b
 DIST python-distutils-extra-2.36.tar.gz 27461 SHA256 94f882aeff4c3227490a012c46a5b445494ef496a539ccf554f8ad5ea92cfcb2 SHA512 c704debc4335bf43f422a58d4b832903eaeb2c8e9e7aa19fa234565e7e609b6554d01074088ff17e8387300dd4ad489ef4613b5e1d1ac9510ef56222d7eaf18e WHIRLPOOL 3cfb5fe4a1b00bf364ddf36c2a95fa35c18aea077760c210c0ab9d1270cb4f54e13ccd7c84005e274abf19ccadca8e7a3de17dfbd156d5035809b04aab5a9bb8
 DIST python-distutils-extra-2.37.tar.gz 27518 SHA256 5c9539badfdc7e0ebb463ee66b9c09d48a08ca121c84ec7316b1fbb799a72878 SHA512 757ef3f3b3c5baa4598ac2e76fc7257fa1d3f3153b842a6a55707150414199b699f460f3b0797674d6ba23824032362a470f500d2b90d9c95a0aae1a71a2d472 WHIRLPOOL f3eb3c3a9462fdf920e52dcbabe21ae8de7e60ad6b0377c5415c34e8ce91c7e3c1cfb80d75776049de081f2fb9a5d88e30161affd2cffa9cf0ef8aaa0602e48e
+DIST python-distutils-extra-2.38.tar.gz 27748 SHA256 3d100d5d3492f40b3e7a6a4500f71290bfa91e2c50dc31ba8e3ff9b5d82ca153 SHA512 bbaea59a8f251f354e6cf3799b67c12225095cc869c7c4e299e719ad7bcfd1292cff99f95ab25f04fb9c3e2432da5ea614ee76154781388c47960fdf2c90a3d7 WHIRLPOOL 10ca7754985aa634aaef7f7fc80777ca4a2b79ecc11e80c48bb2e6c1765cc9f38fbf9696957f974533f50f06db3d1bdb6527f1ed6dbe05619f3d0a17184b885d
 EBUILD python-distutils-extra-2.23.ebuild 1250 SHA256 ba039b0f041514009f4f0bd701c45599b25a9425a88eb645bce81720571833a9 SHA512 43087605200ce8544de0e2594f3258e7b27c2da314d30ae59a6d6399ec5de6a4c9b94dc0d6d9fb20999809ac78073b14a50ef8f692672bbb0be6d48c8c097ac3 WHIRLPOOL 2e424d058b58bbd8d872c965d2bacefa1d639102384d1c0c4dcd0a07b3846f5437fa4ad711e6c6984b0ebb52095aa4e5aadc9b95915776d8b485ac66a462efa9
 EBUILD python-distutils-extra-2.33-r1.ebuild 1266 SHA256 744e418d6286c85d25a1587b7ba5568ee5feae657ea1300326b5452c02848f34 SHA512 510110a49f32ce9d36f18f52a4d95bc9f204b150faf6a5803d0aab2bc3afc3a35ea7291b6298376f64ef654aa27305dca1f5370f779f966f5072ff9b9e75e285 WHIRLPOOL 455cfd3063e96bc8db49235e0cb435610aff72f6d04f94381d01670d14d77dbcb6ff39652481794f0dc4ace7110b10ef4c61b77bb8627c6ce3f2e038a5e693d1
 EBUILD python-distutils-extra-2.33.ebuild 1250 SHA256 dc2d62ea07bdbe83e7d7d4c935efd105571d96b3e37d0dd32acfc98bb9db676b SHA512 473100bb509f0ac12634c0bcd1aa1bd67f316e59331331ab133537ec4ee8b29157b1720ed998fa892404b000744428986da4cd05758fe9aeb611d32a21880ffe WHIRLPOOL 26af66688f2d428b2c3862a49432196704519fbc555d5c20fa13341d9a960014b7eaad12fe46920a262ea875fb7839a8ca935146aaee226d647076c9cec5bad4
@@ -15,24 +16,13 @@ EBUILD python-distutils-extra-2.35.ebuild 1262 SHA256 12c3a7ed40344ecd1a90ffa462
 EBUILD python-distutils-extra-2.36.ebuild 1262 SHA256 b9f61cf02967d8ec85b87bb3c05139f47504df3a193c00b701c033e1d3548393 SHA512 1bd16d15dd93cfffc2273152d13cb006f856a5eb8c543acf99a580f1895f12d0f71913b19210d57bece2e0dd30a134fc45ce8ceef12edab16e4e7dc401f95220 WHIRLPOOL 16a35d3ce957501fc77473bae9c15c63961c2130be84addd240059448780c6bf6e18fa63806be865dd117ce7da44707c6f5663d22db0cc1ac99cb0df534f41b3
 EBUILD python-distutils-extra-2.37-r1.ebuild 1271 SHA256 61ec8b30e2a04f372803e9eb8fa7105b3ca0f1b20a8c80326187a35a9c56669f SHA512 8268db9b22a861ae67289e885468863f06ed334d90c444ad56af2ecfa8a4dfeb18efa7a20cf423aabc02285d7349e44a57566c70276d0f6467c8dde5666c4e7e WHIRLPOOL 7db1bcb1fd95fe6b5886632b95cf82a0d1fd56a5c3d2f6aa635bf8a21b329269ec210a488066152969bd2713d0f94a185ac10fb78dbf288bdba97305b15f3d58
 EBUILD python-distutils-extra-2.37.ebuild 1264 SHA256 86f32db714762e1accfb44662f248ce0c9edf0dbc2cf7d8ece03f0a197c5f5ed SHA512 85c428dd9e8053a82e7a3fb4cd838485f0ccb3be54371708aa1f6c3aca96c07106e74b13b608db0102a002fb3a2e230f6913d212ab9fbfc8159349d5b55749d2 WHIRLPOOL 25b36b4a72fa6a8af99c5413fee2cd7badc6901aee47511e476f5532e95d10d702a286d74061cabbc6f76aca44453ca2d2f7a961dc79e0ffe493545ab3512377
-MISC ChangeLog 4505 SHA256 7aa4aed4c343ba6b431a5d9bdbabde04ce1a9e4c06a00f1d751eb8d11a5146fa SHA512 421f96386a7c351f5789d573378639af13bf277d68fb39cc73c3f96b60918f318187065562dcc49ca285ec16c56162bf7a32e75602c710dab24b3be69f97c83a WHIRLPOOL 5d4d1d5b7dd263ba785910f0d278632a2cf2da96662c6bc30bdd6f834a8e229563368e374dc21e37dfe8e8206528abb5868499a409ac1f635aac629e51a018c4
+EBUILD python-distutils-extra-2.38.ebuild 1226 SHA256 e42a2fee1e2cdaba8b6b2dfb3d266b4d2497691cdefe7de7e16cabbbd3625058 SHA512 8e0c6f2f0334ce67e645eed0cd2e4bc87ca44f7a9cc38469d6378a8e62b10db7ff12e7dec9959853bd546942d8cef68dd89505b444232b069efa3ca781e9a99b WHIRLPOOL 7e90e25447756aca0933b3862caf1540c8517404408224097effabea682376a297734e61c1e9c321e9a2226f5e122dab73d0dfaac3d1e8e99d7fcaaf69d8794c
+MISC ChangeLog 4694 SHA256 2d3d0cf4ae36b92e07023740f22ca50f34dba689c851a1a45a59239fba24b424 SHA512 0b909e3cf9cfd715bfcaa43d923d0af37ce92e3638f5709c1e26073abb901b2f0425f4918b623bb051efc97091b17b8d2b852aaab153de744020e68d4650b5fa WHIRLPOOL 3e4472e05518e6dc7d20d466d0d2de5db80ac0e6732ba7d2a056fbb365f7c857178186572fb08a8e075f438e3287dc4fa2896f8524d96b2c38d8f282955b85dd
 MISC metadata.xml 160 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a SHA512 7c02a1de1ddcb6b7c6378cceff0458da3a15d5381417f7cdf01874e7c372664b8899863f41b3a2fd8d6ad67ceb732dac6da0cc17575bf8e3e6d89480417c6628 WHIRLPOOL ed2795e4466eda8c804d5067c87386e269a59fe959393057ca5ddc36851e00f5210c4da1adf4bbdfdbb7d1d3d5c60aced25727ca12fdc8305d9e263a3aca9b13
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJTOdLeXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOUnUQALbMEvpCLMOi2QhPT2zPXNU4
-e6TeeXDg7BBeaWpcCNw+w1SJn1nVsrKcHf3L9ykXmawwdiev9ygGmVjY8VvPC+ME
-9+/MjHr3Nfq9CrtQOAE99YEiRbsDYPfJ5XQg7q7eNbmcOeDEJDA3QG8HnaDGzjPI
-EjsIKajCljWSmvtbpAXeNNhaOkfjk8NDkSXf59yN6w9edfLa9pxL5D6FyF2NKRwo
-rlVzvEMtHQtcnZoR0e6DS+n6hV7wfynHA6Y1lDMowdMlOlyKOMx99RqBS7dNbIRQ
-jX+4VjiJfYlV1/GSYe1xvtuCnc8BxbNbtgHmMB+YowWTASyy3uQhchi92Ysb2yTC
-s+xrJZd8TZquqJVHmyIycScQTRgpVLxNoBSOltnyX7mzg9K/0cpPyHteaUOCW+lp
-pyvjj7/b/nr7q827y+xbAXK1S0A7hClBVD1uxI4llma9XW83vcB2god1ADTSeG1a
-TTEGYLbiQlHClYKuZ1nGSO0XJ4mLSCX5Eoe961EtLmsv7HenDFuV+LSKU4WuzvfV
-X3ywfFSd0EP16W2ey+ScKe3Ga9eWJHgMF2FQ5qagnaQPB7LKOu/Z1+8qzJ7kyoC/
-iTR6gD+QEr58euzSOXd5zX3a+LJDyNsDLFhfZagKNp6tLY546ONTeMZw19v7J74O
-LblsYjzkcKaNCfc/rAKC
-=o1QQ
+iEYEAREIAAYFAlN3GZAACgkQso7CE7gHKw03cQCg2oTWngmt0uvMSXpST1qnPV9B
+BoUAn0PRcx0hPkJat1X2OI5eDbv8asH7
+=qZgK
 -----END PGP SIGNATURE-----
